@@ -3,7 +3,7 @@ develop =
     .
     benchmark
 
-parts = test benchmark
+parts = test benchmark py
 find-links = http://download.zope.org/distribution/
 
 [test]
@@ -26,3 +26,10 @@ eggs =
 Z3C_PT_DEBUG = False
 Z3C_PT_FILECACHE = ${buildout:directory}/cache
 zope_i18n_allowed_languages = en, da, de
+
+[py]
+recipe = zc.recipe.egg
+eggs = ${benchmark:eggs}
+interpreter = py
+environment = benchmark-environment
+scripts = py
